--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "rimraf": "*",
     "run-sequence": "1.0.0",
     "sails": "~0.11.3",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "redux": "^3.2.0",
+    "react-redux": "^4.2.0",
+    "redux-thunk": "^1.0.3"
   },
   "scripts": {
     "debug": "node debug app.js",
@@ -49,6 +52,7 @@
   "license": "",
   "devDependencies": {
     "react-hot-loader": "^1.3.0",
+    "redux-logger": "^2.4.0",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
   }
