--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "rc": "~1.0.1",
     "rimraf": "*",
     "run-sequence": "1.0.0",
-    "sails": "~0.11.3",
+    "sails": "^0.12.3",
     "sails-disk": "~0.10.0"
   },
   "scripts": {
@@ -48,6 +48,7 @@
   "author": "marlon",
   "license": "",
   "devDependencies": {
+    "grommet-toolbox": "^0.2.4",
     "react-hot-loader": "^1.3.0",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
